# Mice

./: .gitignore  LICENSE  pyproject.toml
Mice/: Mice.py
tests/: test_mice.py
