[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "Mice"
version = "1.0.0"
authors = [
    {name = "Borne Sanders", email = "b@matrixsystemsgroup.com"}
]
description = "Mice is a cookie service that can create, encode, and decode cookies."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
